// Autogenerated with StateSmith 0.21.0-alpha-1+7e3f96c13426722a35ad6604c427da48d8538e48.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#include "StickyCombo.h"
#include <stdbool.h> // required for `consume_event` flag
#include <string.h> // for memset

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void __attribute__((unused)) exit_up_to_state_handler(StickyCombo* sm, StickyCombo_StateId desired_state);

static void ROOT_enter(StickyCombo* sm);

static void ARMED_BOTH_enter(StickyCombo* sm);

static void ARMED_BOTH_exit(StickyCombo* sm);

static void ARMED_BOTH_on_release_both(StickyCombo* sm);

static void ARMED_BOTH_on_release_key1(StickyCombo* sm);

static void ARMED_BOTH_on_release_key2(StickyCombo* sm);

static void ARMED_FOR_KEY1_enter(StickyCombo* sm);

static void ARMED_FOR_KEY1_exit(StickyCombo* sm);

static void ARMED_FOR_KEY1_on_release_both(StickyCombo* sm);

static void ARMED_FOR_KEY1_on_tap_key1(StickyCombo* sm);

static void ARMED_FOR_KEY2_enter(StickyCombo* sm);

static void ARMED_FOR_KEY2_exit(StickyCombo* sm);

static void ARMED_FOR_KEY2_on_release_both(StickyCombo* sm);

static void ARMED_FOR_KEY2_on_tap_key2(StickyCombo* sm);

static void IDLE_enter(StickyCombo* sm);

static void IDLE_exit(StickyCombo* sm);

static void IDLE_on_combo_press(StickyCombo* sm);


// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void StickyCombo_ctor(StickyCombo* sm)
{
    memset(sm, 0, sizeof(*sm));
}

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void StickyCombo_start(StickyCombo* sm)
{
    ROOT_enter(sm);
    // ROOT behavior
    // uml: TransitionTo(ROOT.<InitialState>)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
        // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
        
        // ROOT.<InitialState> behavior
        // uml: TransitionTo(idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `idle`.
            IDLE_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ROOT.<InitialState>
    } // end of behavior for ROOT
}

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void StickyCombo_dispatch_event(StickyCombo* sm, StickyCombo_EventId event_id)
{
    switch (sm->state_id)
    {
        // STATE: StickyCombo
        case StickyCombo_StateId_ROOT:
            // No events handled by this state (or its ancestors).
            break;
        
        // STATE: armed_both
        case StickyCombo_StateId_ARMED_BOTH:
            switch (event_id)
            {
                case StickyCombo_EventId_ON_RELEASE_KEY1: ARMED_BOTH_on_release_key1(sm); break;
                case StickyCombo_EventId_ON_RELEASE_KEY2: ARMED_BOTH_on_release_key2(sm); break;
                case StickyCombo_EventId_ON_RELEASE_BOTH: ARMED_BOTH_on_release_both(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: armed_for_key1
        case StickyCombo_StateId_ARMED_FOR_KEY1:
            switch (event_id)
            {
                case StickyCombo_EventId_ON_TAP_KEY1: ARMED_FOR_KEY1_on_tap_key1(sm); break;
                case StickyCombo_EventId_ON_RELEASE_BOTH: ARMED_FOR_KEY1_on_release_both(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: armed_for_key2
        case StickyCombo_StateId_ARMED_FOR_KEY2:
            switch (event_id)
            {
                case StickyCombo_EventId_ON_TAP_KEY2: ARMED_FOR_KEY2_on_tap_key2(sm); break;
                case StickyCombo_EventId_ON_RELEASE_BOTH: ARMED_FOR_KEY2_on_release_both(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: idle
        case StickyCombo_StateId_IDLE:
            switch (event_id)
            {
                case StickyCombo_EventId_ON_COMBO_PRESS: IDLE_on_combo_press(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
    }
    
}

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void __attribute__((unused)) exit_up_to_state_handler(StickyCombo* sm, StickyCombo_StateId desired_state)
{
    while (sm->state_id != desired_state)
    {
        switch (sm->state_id)
        {
            case StickyCombo_StateId_ARMED_BOTH: ARMED_BOTH_exit(sm); break;
            
            case StickyCombo_StateId_ARMED_FOR_KEY1: ARMED_FOR_KEY1_exit(sm); break;
            
            case StickyCombo_StateId_ARMED_FOR_KEY2: ARMED_FOR_KEY2_exit(sm); break;
            
            case StickyCombo_StateId_IDLE: IDLE_exit(sm); break;
            
            default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
        }
    }
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ROOT
////////////////////////////////////////////////////////////////////////////////

static void ROOT_enter(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ROOT;
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ARMED_BOTH
////////////////////////////////////////////////////////////////////////////////

static void ARMED_BOTH_enter(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ARMED_BOTH;
}

static void ARMED_BOTH_exit(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ROOT;
}

static void ARMED_BOTH_on_release_both(StickyCombo* sm)
{
    // armed_both behavior
    // uml: on_release_both TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_BOTH_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_both
    
    // No ancestor handles this event.
}

static void ARMED_BOTH_on_release_key1(StickyCombo* sm)
{
    // armed_both behavior
    // uml: on_release_key1 TransitionTo(armed_for_key1)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_BOTH_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed_for_key1`.
        ARMED_FOR_KEY1_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_both
    
    // No ancestor handles this event.
}

static void ARMED_BOTH_on_release_key2(StickyCombo* sm)
{
    // armed_both behavior
    // uml: on_release_key2 TransitionTo(armed_for_key2)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_BOTH_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed_for_key2`.
        ARMED_FOR_KEY2_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_both
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ARMED_FOR_KEY1
////////////////////////////////////////////////////////////////////////////////

static void ARMED_FOR_KEY1_enter(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ARMED_FOR_KEY1;
}

static void ARMED_FOR_KEY1_exit(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ROOT;
}

static void ARMED_FOR_KEY1_on_release_both(StickyCombo* sm)
{
    // armed_for_key1 behavior
    // uml: on_release_both TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_FOR_KEY1_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_for_key1
    
    // No ancestor handles this event.
}

static void ARMED_FOR_KEY1_on_tap_key1(StickyCombo* sm)
{
    // armed_for_key1 behavior
    // uml: on_tap_key1 TransitionTo(armed_both)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_FOR_KEY1_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed_both`.
        ARMED_BOTH_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_for_key1
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ARMED_FOR_KEY2
////////////////////////////////////////////////////////////////////////////////

static void ARMED_FOR_KEY2_enter(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ARMED_FOR_KEY2;
}

static void ARMED_FOR_KEY2_exit(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ROOT;
}

static void ARMED_FOR_KEY2_on_release_both(StickyCombo* sm)
{
    // armed_for_key2 behavior
    // uml: on_release_both TransitionTo(idle)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_FOR_KEY2_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `idle`.
        IDLE_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_for_key2
    
    // No ancestor handles this event.
}

static void ARMED_FOR_KEY2_on_tap_key2(StickyCombo* sm)
{
    // armed_for_key2 behavior
    // uml: on_tap_key2 TransitionTo(armed_both)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        ARMED_FOR_KEY2_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed_both`.
        ARMED_BOTH_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for armed_for_key2
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state IDLE
////////////////////////////////////////////////////////////////////////////////

static void IDLE_enter(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_IDLE;
}

static void IDLE_exit(StickyCombo* sm)
{
    sm->state_id = StickyCombo_StateId_ROOT;
}

static void IDLE_on_combo_press(StickyCombo* sm)
{
    // idle behavior
    // uml: on_combo_press TransitionTo(armed_both)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        IDLE_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `armed_both`.
        ARMED_BOTH_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for idle
    
    // No ancestor handles this event.
}

// Thread safe.
char const * StickyCombo_state_id_to_string(StickyCombo_StateId id)
{
    switch (id)
    {
        case StickyCombo_StateId_ROOT: return "ROOT";
        case StickyCombo_StateId_ARMED_BOTH: return "ARMED_BOTH";
        case StickyCombo_StateId_ARMED_FOR_KEY1: return "ARMED_FOR_KEY1";
        case StickyCombo_StateId_ARMED_FOR_KEY2: return "ARMED_FOR_KEY2";
        case StickyCombo_StateId_IDLE: return "IDLE";
        default: return "?";
    }
}

// Thread safe.
char const * StickyCombo_event_id_to_string(StickyCombo_EventId id)
{
    switch (id)
    {
        case StickyCombo_EventId_ON_COMBO_PRESS: return "ON_COMBO_PRESS";
        case StickyCombo_EventId_ON_RELEASE_BOTH: return "ON_RELEASE_BOTH";
        case StickyCombo_EventId_ON_RELEASE_KEY1: return "ON_RELEASE_KEY1";
        case StickyCombo_EventId_ON_RELEASE_KEY2: return "ON_RELEASE_KEY2";
        case StickyCombo_EventId_ON_TAP_KEY1: return "ON_TAP_KEY1";
        case StickyCombo_EventId_ON_TAP_KEY2: return "ON_TAP_KEY2";
        default: return "?";
    }
}
