@startuml StickyCombo
state idle
state armed_both
state armed_for_key1
state armed_for_key2

[*] -> idle

idle --> armed_both : on_combo_press
armed_both --> armed_for_key1 : on_release_key1
armed_both --> armed_for_key2 : on_release_key2
armed_both --> idle : on_release_both

armed_for_key1 --> armed_both : on_tap_key1
armed_for_key1 --> idle : on_release_both

armed_for_key2 --> armed_both : on_tap_key2
armed_for_key2 --> idle : on_release_both

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "C99"
'/
@enduml
